Fix wrong logic in reason not allowed to submit
Part of ia-toki/judgels#257

--- a/app/org/iatoki/judgels/sandalphon/views/blackBoxViewStatementView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/views/blackBoxViewStatementView.scala.html
@@ -28,7 +28,7 @@
 
 @implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-2", "col-md-10") }
 
-@if(reasonNotAllowedToSubmit != null) {
+@if(reasonNotAllowedToSubmit == null) {
     @b3.form(play.api.mvc.Call("POST", postSubmitUri), 'enctype->"multipart/form-data") {
 
         @b3.hidden("engine", engine)
