Adapt to judgels-play-commons and judgels-commons restructure
Part of ia-toki/judgels#286

--- a/app/org/iatoki/judgels/sandalphon/views/blackBoxViewSubmissionView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/views/blackBoxViewSubmissionView.scala.html
@@ -1,6 +1,6 @@
 @(submission: org.iatoki.judgels.sandalphon.Submission, details: org.iatoki.judgels.gabriel.blackbox.BlackBoxGradingResultDetails, sourceFiles: Map[String, org.iatoki.judgels.gabriel.blackbox.SourceFile], authorName: String, problemAlias: String, problemName: String, gradingLanguageName: String, contestName: String)
 
-@import org.iatoki.judgels.commons.JudgelsUtils
+@import org.iatoki.judgels.play.JudgelsUtils
 
 <h3>Submission #@submission.getId</h3>
 
