--- a/app/org/iatoki/judgels/sandalphon/blackbox/views/problem/programming/grading/interactiveGradingConfigView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/blackbox/views/problem/programming/grading/interactiveGradingConfigView.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[org.iatoki.judgels.sandalphon.forms.BatchGradingConfigForm], problem: org.iatoki.judgels.sandalphon.Problem, testDataFiles: List[org.iatoki.judgels.FileInfo], helperFiles: List[org.iatoki.judgels.FileInfo])
+@(form: Form[org.iatoki.judgels.sandalphon.blackbox.forms.InteractiveGradingConfigForm], problem: org.iatoki.judgels.sandalphon.Problem, testDataFiles: List[org.iatoki.judgels.FileInfo], helperFiles: List[org.iatoki.judgels.FileInfo])
 
 @import play.i18n.Messages
 @import org.iatoki.judgels.sandalphon.controllers.routes
@@ -38,7 +38,7 @@ $(document).ready(function() {
     };
 
     function addNewSampleTestCase(inputVal, outputVal) {
-        if (!inputVal || !outputVal) {
+        if (!inputVal) {
             alert("You don't have any test data files");
             return;
         }
@@ -107,7 +107,7 @@ $(document).ready(function() {
     }
 
     function addNewTestCase(inputVal, outputVal) {
-        if (!inputVal || !outputVal) {
+        if (!inputVal) {
             alert("You don't have any test data files");
             return;
         }
@@ -226,7 +226,7 @@ $(document).ready(function() {
                         <thead>
                             <tr>
                                 <th>Sample Input</th>
-                                <th>Sample Output</th>
+                                <th style="display: none">Sample Output</th>
                                 <th></th>
                             </tr>
                         </thead>
@@ -235,7 +235,7 @@ $(document).ready(function() {
                                 <td>
                                     <input class="form-control input-sm" type="text" readonly="readonly" value="file_0_0.in" />
                                 </td>
-                                <td>
+                                <td style="display: none">
                                     <input class="form-control input-sm" type="text" readonly="readonly" value="file_0_0.out" />
                                 </td>
                                 <td class="text-center">
@@ -251,11 +251,8 @@ $(document).ready(function() {
                                     }
                                     </select>
                                 </td>
-                                <td>
-                                    <select>
-                                    @for(file <- testDataFiles) {
-                                        <option value="@file.getName">@file.getName</option>
-                                    }
+                                <td style="display: none">
+                                    <select readonly="readonly">
                                     </select>
                                 </td>
                                 <td class="text-center">
@@ -284,7 +281,7 @@ $(document).ready(function() {
                         <thead>
                             <tr>
                                 <th>Input</th>
-                                <th>Output</th>
+                                <th style="display: none">Output</th>
                                 <th></th>
                             </tr>
                         </thead>
@@ -293,7 +290,7 @@ $(document).ready(function() {
                                 <td>
                                     <input class="form-control input-sm" type="text" readonly="readonly" value="file_0_0.in" />
                                 </td>
-                                <td>
+                                <td style="display: none">
                                     <input class="form-control input-sm" type="text" readonly="readonly" value="file_0_0.out" />
                                 </td>
                                 <td class="text-center">
@@ -309,11 +306,8 @@ $(document).ready(function() {
                                     }
                                     </select>
                                 </td>
-                                <td>
+                                <td style="display: none">
                                     <select>
-                                    @for(file <- testDataFiles) {
-                                        <option value="@file.getName">@file.getName</option>
-                                    }
                                     </select>
                                 </td>
                                 <td class="text-center">
@@ -328,8 +322,11 @@ $(document).ready(function() {
     </div>
 
 
-    @b3.select(form("customScorer"), helperFiles.map(f => f.getName -> f.getName).toSeq ++ Seq("(none)" -> "(None)"), '_label -> "Custom Scorer")
-
+    @if(helperFiles.isEmpty) {
+        @b3.select(form("communicator"), Seq("none" -> "(None yet - please add communicator as a helper file)"), '_label -> "Communicator")
+    }else {
+        @b3.select(form("communicator"), helperFiles.map(f => f.getName -> f.getName).toSeq, '_label -> "Communicator")
+    }
 
     @b3.submit('class -> "btn btn-primary") { @Messages.get("commons.update") }
 }
