--- a/app/org/iatoki/judgels/sandalphon/blackbox/views/problem/programming/grading/interactiveWithSubtasksGradingConfigView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/blackbox/views/problem/programming/grading/interactiveWithSubtasksGradingConfigView.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[org.iatoki.judgels.sandalphon.forms.InteractiveWithSubtasksGradingConfigForm], problem: org.iatoki.judgels.sandalphon.Problem, testDataFiles: List[org.iatoki.judgels.FileInfo], helperFiles: List[org.iatoki.judgels.FileInfo])
+@(form: Form[org.iatoki.judgels.sandalphon.blackbox.forms.InteractiveWithSubtasksGradingConfigForm], problem: org.iatoki.judgels.sandalphon.Problem, testDataFiles: List[org.iatoki.judgels.FileInfo], helperFiles: List[org.iatoki.judgels.FileInfo])
 
 @import play.i18n.Messages
 @import org.iatoki.judgels.sandalphon.controllers.routes
