--- a/app/org/iatoki/judgels/sandalphon/blackbox/views/problem/programming/grading/batchWithSubtasksGradingConfigView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/blackbox/views/problem/programming/grading/batchWithSubtasksGradingConfigView.scala.html
@@ -1,7 +1,6 @@
-@(form: Form[org.iatoki.judgels.sandalphon.blackbox.forms.BatchWithSubtasksGradingConfigForm], problem: org.iatoki.judgels.sandalphon.Problem, testDataFiles: List[org.iatoki.judgels.FileInfo], helperFiles: List[org.iatoki.judgels.FileInfo])
+@(form: Form[org.iatoki.judgels.sandalphon.blackbox.forms.BatchWithSubtasksGradingConfigForm], postUpdateGradingConfigCall: play.api.mvc.Call, testDataFiles: List[org.iatoki.judgels.FileInfo], helperFiles: List[org.iatoki.judgels.FileInfo])
 
 @import play.i18n.Messages
-@import org.iatoki.judgels.sandalphon.controllers.routes
 
 @implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-3", "col-md-9") }
 
@@ -327,7 +326,7 @@ $(document).ready(function() {
 
 </script>
 
-@b3.form(routes.ProgrammingProblemGradingController.postUpdateGradingConfig(problem.getId)) {
+@b3.form(postUpdateGradingConfigCall) {
     @helper.CSRF.formField
 
 
