Standardize code styles and refactor
part of judgels/judgels#9

--- a/app/org/iatoki/judgels/sandalphon/blackbox/views/problem/programming/grading/batchGradingConfigView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/blackbox/views/problem/programming/grading/batchGradingConfigView.scala.html
@@ -1,6 +1,9 @@
-@(form: Form[org.iatoki.judgels.sandalphon.blackbox.forms.BatchGradingConfigForm], postUpdateGradingConfigCall: play.api.mvc.Call, testDataFiles: List[org.iatoki.judgels.FileInfo], helperFiles: List[org.iatoki.judgels.FileInfo])
-
 @import play.i18n.Messages
+@import play.api.mvc.Call
+@import org.iatoki.judgels.FileInfo
+@import org.iatoki.judgels.sandalphon.blackbox.forms.BatchGradingConfigForm
+
+@(batchGradingConfigForm: Form[BatchGradingConfigForm], postUpdateGradingConfigCall: Call, testDataFiles: List[FileInfo], helperFiles: List[FileInfo])
 
 @implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-3", "col-md-9") }
 
@@ -182,13 +185,13 @@ $(document).ready(function() {
         return false;
     });
 
-    @for(i <- 0 until form.get.sampleTestCaseInputs.size) {
-        addNewSampleTestCase('@form.get.sampleTestCaseInputs.get(i)', '@form.get.sampleTestCaseOutputs.get(i)');
+    @for(i <- 0 until batchGradingConfigForm.get.sampleTestCaseInputs.size) {
+        addNewSampleTestCase('@batchGradingConfigForm.get.sampleTestCaseInputs.get(i)', '@batchGradingConfigForm.get.sampleTestCaseOutputs.get(i)');
     }
 
-    @for(i <- 0 until form.get.testCaseInputs.size) {
-        @for(j <- 0 until form.get.testCaseInputs.get(i).size) {
-            addNewTestCase('@form.get.testCaseInputs.get(i).get(j)', '@form.get.testCaseOutputs.get(i).get(j)');
+    @for(i <- 0 until batchGradingConfigForm.get.testCaseInputs.size) {
+        @for(j <- 0 until batchGradingConfigForm.get.testCaseInputs.get(i).size) {
+            addNewTestCase('@batchGradingConfigForm.get.testCaseInputs.get(i).get(j)', '@batchGradingConfigForm.get.testCaseOutputs.get(i).get(j)');
         }
     }
 });
@@ -199,13 +202,13 @@ $(document).ready(function() {
     @helper.CSRF.formField
 
 
-    @b3.inputWrapped("timeLimit", form("timeLimit"), '_label -> "Time Limit") { input =>
+    @b3.inputWrapped("timeLimit", batchGradingConfigForm("timeLimit"), '_label -> "Time Limit") { input =>
         <div class="input-group">
             @input
             <div class="input-group-addon">milliseconds</div>
         </div>
     }
-    @b3.inputWrapped("memoryLimit", form("memoryLimit"), '_label -> "Memory Limit") { input =>
+    @b3.inputWrapped("memoryLimit", batchGradingConfigForm("memoryLimit"), '_label -> "Memory Limit") { input =>
         <div class="input-group">
             @input
             <div class="input-group-addon">kilobytes</div>
@@ -327,7 +330,7 @@ $(document).ready(function() {
     </div>
 
 
-    @b3.select(form("customScorer"), helperFiles.map(f => f.getName -> f.getName).toSeq ++ Seq("(none)" -> "(None)"), '_label -> "Custom Scorer")
+    @b3.select(batchGradingConfigForm("customScorer"), helperFiles.map(f => f.getName -> f.getName).toSeq ++ Seq("(none)" -> "(None)"), '_label -> "Custom Scorer")
 
 
     @b3.submit('class -> "btn btn-primary") { @Messages.get("commons.update") }
