--- a/app/org/iatoki/judgels/sandalphon/blackbox/views/problem/programming/grading/interactiveWithSubtasksGradingConfigView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/blackbox/views/problem/programming/grading/interactiveWithSubtasksGradingConfigView.scala.html
@@ -1,6 +1,9 @@
-@(form: Form[org.iatoki.judgels.sandalphon.blackbox.forms.InteractiveWithSubtasksGradingConfigForm], postUpdateGradingConfigCall: play.api.mvc.Call, testDataFiles: List[org.iatoki.judgels.FileInfo], helperFiles: List[org.iatoki.judgels.FileInfo])
-
 @import play.i18n.Messages
+@import play.api.mvc.Call
+@import org.iatoki.judgels.FileInfo
+@import org.iatoki.judgels.sandalphon.blackbox.forms.InteractiveWithSubtasksGradingConfigForm
+
+@(interactiveWithSubtasksGradingConfigForm: Form[InteractiveWithSubtasksGradingConfigForm], postUpdateGradingConfigCall: Call, testDataFiles: List[FileInfo], helperFiles: List[FileInfo])
 
 @implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-3", "col-md-9") }
 
@@ -69,7 +72,7 @@ $(document).ready(function() {
 
         // Add subtasks
         var subtaskCheckboxes = [];
-        for (var subtaskNo = 0; subtaskNo < @form.get.subtaskPoints.size(); subtaskNo++) {
+        for (var subtaskNo = 0; subtaskNo < @interactiveWithSubtasksGradingConfigForm.get.subtaskPoints.size(); subtaskNo++) {
             var subtaskCheckbox = sampleTestCaseSubtaskTemplate.clone().removeAttr('id');
             subtaskCheckbox.find('input')
                 .val(subtaskNo + 1)
@@ -207,7 +210,7 @@ $(document).ready(function() {
 
         // Add subtasks
         var subtaskCheckboxes = [];
-        for (var subtaskNo = 0; subtaskNo < @form.get.subtaskPoints.size(); subtaskNo++) {
+        for (var subtaskNo = 0; subtaskNo < @interactiveWithSubtasksGradingConfigForm.get.subtaskPoints.size(); subtaskNo++) {
             var subtaskCheckbox = testGroupSubtaskTemplate.clone().removeAttr('id');
             subtaskCheckbox.find('input')
                 .val(subtaskNo + 1)
@@ -303,22 +306,22 @@ $(document).ready(function() {
         addNewTestGroup();
     });
 
-    @for(i <- 0 until form.get.sampleTestCaseInputs.size) {
-        addNewSampleTestCase('@form.get.sampleTestCaseInputs.get(i)', '@form.get.sampleTestCaseOutputs.get(i)');
-        @for(j <- 0 until form.get.sampleTestCaseSubtaskIds.get(i).size) {
-            @if(form.get.sampleTestCaseSubtaskIds.get(i).get(j) != null) {
+    @for(i <- 0 until interactiveWithSubtasksGradingConfigForm.get.sampleTestCaseInputs.size) {
+        addNewSampleTestCase('@interactiveWithSubtasksGradingConfigForm.get.sampleTestCaseInputs.get(i)', '@interactiveWithSubtasksGradingConfigForm.get.sampleTestCaseOutputs.get(i)');
+        @for(j <- 0 until interactiveWithSubtasksGradingConfigForm.get.sampleTestCaseSubtaskIds.get(i).size) {
+            @if(interactiveWithSubtasksGradingConfigForm.get.sampleTestCaseSubtaskIds.get(i).get(j) != null) {
                 checkSampleTestCaseSubtask(@i, @j);
             }
         }
     }
 
-    @for(i <- 0 until form.get.testCaseInputs.size) {
+    @for(i <- 0 until interactiveWithSubtasksGradingConfigForm.get.testCaseInputs.size) {
         addNewTestGroup();
-        @for(j <- 0 until form.get.testCaseInputs.get(i).size) {
-            addNewTestCase(@i, '@form.get.testCaseInputs.get(i).get(j)', '@form.get.testCaseOutputs.get(i).get(j)');
+        @for(j <- 0 until interactiveWithSubtasksGradingConfigForm.get.testCaseInputs.get(i).size) {
+            addNewTestCase(@i, '@interactiveWithSubtasksGradingConfigForm.get.testCaseInputs.get(i).get(j)', '@interactiveWithSubtasksGradingConfigForm.get.testCaseOutputs.get(i).get(j)');
         }
-        @for(j <- 0 until form.get.testGroupSubtaskIds.get(i).size) {
-            @if(form.get.testGroupSubtaskIds.get(i).get(j) != null) {
+        @for(j <- 0 until interactiveWithSubtasksGradingConfigForm.get.testGroupSubtaskIds.get(i).size) {
+            @if(interactiveWithSubtasksGradingConfigForm.get.testGroupSubtaskIds.get(i).get(j) != null) {
                 checkTestGroupSubtask(@i, @j);
             }
         }
@@ -331,13 +334,13 @@ $(document).ready(function() {
     @helper.CSRF.formField
 
 
-    @b3.inputWrapped("timeLimit", form("timeLimit"), '_label -> "Time Limit") { input =>
+    @b3.inputWrapped("timeLimit", interactiveWithSubtasksGradingConfigForm("timeLimit"), '_label -> "Time Limit") { input =>
         <div class="input-group">
             @input
             <div class="input-group-addon">milliseconds</div>
         </div>
     }
-    @b3.inputWrapped("memoryLimit", form("memoryLimit"), '_label -> "Memory Limit") { input =>
+    @b3.inputWrapped("memoryLimit", interactiveWithSubtasksGradingConfigForm("memoryLimit"), '_label -> "Memory Limit") { input =>
         <div class="input-group">
             @input
             <div class="input-group-addon">kilobytes</div>
@@ -443,13 +446,13 @@ $(document).ready(function() {
                             </tr>
                         </thead>
                         <tbody>
-                            @for(i <- 0 until form.get.subtaskPoints.size) {
+                            @for(i <- 0 until interactiveWithSubtasksGradingConfigForm.get.subtaskPoints.size) {
                                 <tr>
                                     <td>
                                     @{i+1}
                                     </td>
                                     <td>
-                                        @b3.text(form("subtaskPoints[" + i + "]"), '_label -> None)(b3.clear.fieldConstructor, implicitly[play.api.i18n.Messages])
+                                        @b3.text(interactiveWithSubtasksGradingConfigForm("subtaskPoints[" + i + "]"), '_label -> None)(b3.clear.fieldConstructor, implicitly[play.api.i18n.Messages])
                                     </td>
                                 </tr>
                             }
@@ -461,9 +464,9 @@ $(document).ready(function() {
     </div>
 
     @if(helperFiles.isEmpty) {
-        @b3.select(form("communicator"), Seq("none" -> "(None yet - please add communicator as a helper file)"), '_label -> "Communicator")
+        @b3.select(interactiveWithSubtasksGradingConfigForm("communicator"), Seq("none" -> "(None yet - please add communicator as a helper file)"), '_label -> "Communicator")
     }else {
-        @b3.select(form("communicator"), helperFiles.map(f => f.getName -> f.getName).toSeq, '_label -> "Communicator")
+        @b3.select(interactiveWithSubtasksGradingConfigForm("communicator"), helperFiles.map(f => f.getName -> f.getName).toSeq, '_label -> "Communicator")
     }
 
     @b3.submit('class -> "btn btn-primary") { @Messages.get("commons.update") }
